# AgentSafety

./: .gitignore  .sop16-check.sh  REVIEW_REPORT.md  SKILL.md  pyproject.toml
src/agent_safety/: __init__.py  _skill_base.py  audit_stream.py  cli.py  core.py  guardrails.py  informed_consent.py  plugin_scanner.py  policies.py  self_supervised.py  skill.py  skill.py.bak-pre-luhn-20260607-1023
